@@ -32,11 +32,8 @@
 #include <stdio.h>
 #include <ctype.h>
 
-#include <krb5/krb5.h>
-#include <krb5/ext-proto.h>
-#include <krb5/los-proto.h>
-#include <krb5/sysincl.h>
-#include <com_err.h>
+#include "krb5.h"
+#include "com_err.h"
 
 #include "simple.h"
 
