@@ -1,3 +1,7 @@
+Tue Feb 28 02:01:29 1995  John Gilmore  (gnu at toad.com)
+
+	* sim_client.c:  Avoid <krb5/...> and <com_err.h> includes.
+
 Tue Feb 14 15:30:55 1995 Chris Provenzano  (proven@mit.edu)
 
         * sim_client.c Call krb5_sendauth() with new calling convention.
